<resources>
    <string name="app_name">LootByte</string>
    <string name="inicio">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="ofertas">Ofertas</string>
    <string name="perfil">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qu_estas_buscando">¿Qué estas buscando?</string>
    <string name="todo">Todo</string>
    <string name="mouse">Mouse</string>
    <string name="teclados">Teclados</string>
    <string name="pantallas">Pantallas</string>
    <string name="aud_fonos">Audífonos</string>
    <string name="producto">Producto</string>
    <string name="usuarios">Usuarios</string>
    <string name="pedidos">Pedidos</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="producto_s">Producto(s)</string>
    <string name="continuar">Continuar</string>
    <string name="todos_los_productos">Todos los productos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="datos_de_env_o">Datos de envío</string>
    <string name="ingrese_su_nombre_completo">Ingrese su nombre completo</string>
    <string name="correo">Correo</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="direcci_n">Dirección</string>
    <string name="ingrese_su_direcci_n">Ingrese su dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="ingrese_su_ciudad">Ingrese su ciudad</string>
    <string name="tel_fono">Teléfono</string>
    <string name="escoger_m_todo_de_pagor">Escoger método de pago</string>
    <string name="m_todo_de_pago">Método de pago</string>
    <string name="seleccione_el_m_todo_de_pago">Seleccione el método de pago</string>
    <string name="tarjeta_d_bito_cr_dito">Tarjeta débito/crédito</string>
    <string name="pse_desde_cualquier_banco">PSE desde cualquier banco</string>
    <string name="pago_seguro">Pago seguro</string>
    <string name="tu_informaci_n_est_protegida">Tu información está protegida</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="nombre_de_la_tarjeta">Nombre de la tarjeta</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="nombre_del_banco">Nombre del banco</string>
    <string name="fecha_de_expedi_n">Fecha de expedición</string>
    <string name="mm_aa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="_000">000</string>
    <string name="cuotas">Cuotas</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="total_a_pagar">Total a pagar</string>
    <string name="_0">$0</string>
    <string name="pago_exitoso">¡Pago exitoso!</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="subir_foto_del_usuario">Subir foto del usuario</string>
    <string name="ingrese_el_nombre_completo">Ingrese el nombre completo</string>
    <string name="rol">Rol</string>
    <string name="agregar_usuario">Agregar usuario</string>
    <string name="imagen_del_usuario">Imagen del usuario</string>
    <string name="subir_imagen_del_producto">Subir imagen del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="c_digo_del_producto">Código del producto</string>
    <string name="precio">Precio</string>
    <string name="ingrese_el_c_digo_del_producto">Ingrese el código del producto</string>
    <string name="_precio">$ precio</string>
    <string name="cantidad_disponible">Cantidad disponible: </string>
    <string name="stock_del_producto">Stock del producto</string>
    <string name="colores_del_producto">Colores del producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="ingrese_la_descripci_n_del_producto">Descripción del producto</string>
    <string name="el_stock_del_producto_monitos_24_pulgadas_dft_se_est_agotando">El stock del producto Monitor 24 pulgadas dft se está agotando.</string>
    <string name="el_stock_del_producto_monitor_24_pulgadas_dft_se_agot">El stock del producto Monitor 24 pulgadas dft se agotó.</string>
    <string name="gestionar_pedidos">Gestionar pedidos</string>
    <string name="el_usuario_usuario_demo_pidi">El usuario Usuario Demo pidió:</string>
    <string name="lista_de_producto_s">Lista de producto(s)</string>
    <string name="proyector">Proyector</string>
    <string name="_400_000">$ 400.000</string>
    <string name="unidades_1">unidades: 1</string>
    <string name="detalles_de_env_o">Detalles de envío</string>
    <string name="nombre_de_usuario">nombreUsuario</string>
    <string name="usuario_demo">Usuario Demo</string>
    <string name="despachar">Despachar</string>
    <string name="estado">Estado</string>
    <string name="_0000000000">0000000000</string>
    <string name="bogot_d_c">Bogotá D.C.</string>
    <string name="calle_123_45_67">Calle 123 #45-67</string>
    <string name="usuariodemo_email_com">usuariodemo@email.com</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad_ejemplo">Ciudad Ejemplo</string>
    <string name="celular">Celular</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="ver_pedido_s">Ver pedido(s)</string>
    <string name="verificaci_n_de_dos_pasos">Verificación de dos pasos</string>
    <string name="desea_activar_la_verificaci_n_de_dos_pasos">¿Desea activar la verificación de dos pasos?</string>
    <string name="configura_tu_formas_de_validaci_n">Configura tu formas de validación</string>
    <string name="tel_fono_celular">Teléfono celular</string>
    <string name="seguridad">Seguridad</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="alertas_de_seguridad">Alertas de seguridad</string>
    <string name="registra_tu_cuenta">Registra tu cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="privacidad">Privacidad</string>
    <string name="configurar_cookies">Configurar cookies</string>
    <string name="cancelar_cuenta">Cancelar cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="productos_bajos_de_stock">Productos bajos de stock</string>
    <string name="_15">15</string>
    <string name="tasa_de_conversi_n">Tasa de conversión</string>
    <string name="_12_4">12.4%</string>
    <string name="ingresos_mensuales">Ingresos Mensuales</string>
    <string name="_45_2k">$45.2K</string>
    <string name="pedidos_de_hoy">Pedidos de hoy</string>
    <string name="_87">87</string>
    <string name="clientes_activos">Clientes activos</string>
    <string name="_1_234">1,234</string>
    <string name="total_productos">Total productos</string>
    <string name="_248">248</string>
    <string name="m_tricas_del_sistema">Métricas del sistema</string>
    <string name="rol_administrador">Rol: Administrador</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="no_tienes_pedidos_a_n">No tienes pedidos aún</string>
    <string name="logo_lootbyte">Logo LootByte</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="continuar_con_facebook">Continuar con Facebook</string>
    <string name="utilizamos_cookies_para_mejorar_tu_experiencia_puedes_personalizar_tus_preferencias_a_continuaci_n">Utilizamos cookies para mejorar tu experiencia. Puedes personalizar tus preferencias a continuación.</string>
    <string name="cookies_necesarias">Cookies necesarias</string>
    <string name="esenciales_para_el_funcionamiento_del_sitio">Esenciales para el funcionamiento del sitio</string>
    <string name="cookies_funcionales">Cookies funcionales</string>
    <string name="permiten_funcionalidades_mejoradas">Permiten funcionalidades mejoradas</string>
    <string name="cookies_anal_ticas">Cookies analíticas</string>
    <string name="nos_ayudan_a_entender_c_mo_usas_el_sitio">Nos ayudan a entender cómo usas el sitio</string>
    <string name="cookies_de_marketing">Cookies de marketing</string>
    <string name="se_usan_para_mostrar_anuncios_relevantes">Se usan para mostrar anuncios relevantes</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="una_vez_que_canceles_tu_cuenta_ya_no_hay_vuelta_atr_s">Una vez que canceles tu cuenta, ya no hay vuelta atrás.</string>
    <string name="avisos_de_alertas">Avisos de alertas</string>
    <string name="en_este_apartado_y_en_los_canales_registrados_podr_s_recibir_alertas_de_inicio_de_sesi_n_entre_otros">En este apartado y en los canales registrados podrás recibir alertas de inicio de sesión entre otros.</string>
    <string name="no_hay_alertas_recientes">No hay alertas recientes</string>
    <string name="pedidos_hoy">Pedidos hoy</string>
    <string name="ingresos">Ingresos</string>
    <string name="hyperx_cloud_iii">HyperX Cloud III</string>
    <string name="_349_900">$ 349.900</string>
    <string name="redragon_kumara_k552">Redragon Kumara K552</string>
    <string name="_189_900">$ 189.900</string>
    <string name="logitech_g_pro_x_superlight">Logitech G Pro X Superlight</string>
    <string name="_499_900">$ 499.900</string>
    <string name="razer_deathadder_v3">Razer DeathAdder V3</string>
    <string name="_389_900">$ 389.900</string>
    <string name="steelseries_apex_pro">SteelSeries Apex Pro</string>
    <string name="_699_900">$ 699.900</string>
    <string name="jbl_quantum_100">JBL Quantum 100</string>
    <string name="_179_900">$ 179.900</string>
    <string name="_250_000">$ 250.000</string>
    <string name="_20_off">20% OFF</string>
    <string name="_116_935">$ 116.935</string>
    <string name="_35_off">35% OFF</string>
    <string name="_450_000">$ 450.000</string>
    <string name="_15_off">15% OFF</string>
    <string name="_850_000">$ 850.000</string>
    <string name="_18_off">18% OFF</string>
    <string name="descripci_n_">Descripción</string>
    <string name="los_hyperx_cloud_iii_ofrecen_sonido_envolvente_de_alta_calidad_micr_fono_desmontable_con_cancelaci_n_de_ruido_y_almohadillas_memory_foam_para_m_xima_comodidad_durante_largas_sesiones_gaming_compatibles_con_pc_playstation_y_xbox">Los HyperX Cloud III ofrecen sonido envolvente de alta calidad, micrófono desmontable con cancelación de ruido y almohadillas memory foam para máxima comodidad durante largas sesiones gaming. Compatibles con PC, PlayStation y Xbox.</string>
    <string name="rese_as">Reseñas</string>
    <string name="Estrellas">★★★★★</string>
    <string name="excelente_calidad_de_sonido_y_muy_c_modos_para_jugar_durante_horas">Excelente calidad de sonido y muy cómodos para jugar durante horas.</string>
    <string name="andr_s_g">Andrés G.</string>
    <string name="agregar_al_carrito_">Agregar al carrito</string>
    <string name="comprar_ahora_">Comprar ahora</string>
    <string name="categoria_del_producto">Categoria del producto</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingrese_su_celular">Ingrese su celular</string>
    <string name="volver">Volver</string>
</resources>