<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".UI.SeccionPagos.DatosDeEnvioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_de_env_o"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

<!--        Nombre completo-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_completo"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        
        <EditText
            android:id="@+id/et_Nombre_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_su_nombre_completo"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"/>

        <!--        Correo-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_su_correo"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"/>

        <!--        Dirección-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_su_direcci_n"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textPostalAddress"/>

        <!--        Ciudad-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_Ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_su_ciudad"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textCapWords"/>

        <!--        Telefono-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_fono"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese su teléfono"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="phone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Metodo_pago"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/escoger_m_todo_de_pagor"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>