<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UI.MainMenu.Admin.ProductosAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/outline_add_photo_alternate_24"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_foto_producto"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/subir_imagen_del_producto"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_Nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_nombre_completo"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_del_producto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_codigo_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_c_digo_del_producto"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_precio_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_precio"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_del_producto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_stock_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad_disponible"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colores_del_producto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_colores_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad_disponible"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_del_producto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_descripcion_producto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/ingrese_la_descripci_n_del_producto"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/style_edit_text"
            android:layout_marginBottom="20dp"
            android:inputType="textMultiLine"
            android:gravity="top|start"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_agregar_Producto"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/agregar_producto"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

</ScrollView>